<resources>
    <string name="app_name">Obstacle Race Game</string>
    <string name="car">Car</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="life">Right</string>
    <string name="score_0">Score: 0</string>
    <string name="distance_0km">Distance: 0Km</string>
    <string name="fast_mode">Fast Mode</string>
    <string name="slow_mode">Slow Mode</string>
    <string name="normal_game">Normal Game</string>
    <string name="sensor_mode">Sensor Mode</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="menu">Menu</string>
    <string name="enter_name">Enter Name</string>
    <string name="top_10_records">Top 10 Records</string>
    <string name="location_permission_denied_map_cannot_be_displayed">Location permission denied. Map cannot be displayed.</string>
</resources>