<!-- res/layout/activity_menu.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/five_lanes_new"
    tools:context=".MenuActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_game"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        style="@style/CustomButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sensorModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_mode"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/startGameButton"
        android:layout_marginTop="@dimen/layout_margin"
        style="@style/CustomButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fastSlowModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_mode"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sensorModeButton"
        android:layout_marginTop="@dimen/layout_margin"
        style="@style/CustomButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leaderboardsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboards"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fastSlowModeButton"
        android:layout_marginTop="@dimen/layout_margin"
        style="@style/CustomButtonStyle"/>

</RelativeLayout>
