<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/three_lanes">

    <!-- Lives -->
    <LinearLayout
        android:id="@+id/livesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/life1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/life"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/life2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/life"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/life3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/life"/>
    </LinearLayout>

    <!-- Game Area -->
    <RelativeLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/buttonLayout"
        android:layout_below="@+id/livesLayout">

        <!-- Car -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/car1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:src="@drawable/car1"
            android:contentDescription="@string/car" />
    </RelativeLayout>

    <!-- Control Buttons -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            style="@style/CustomButtonStyle"
            android:layout_marginEnd="@dimen/button_margin_end"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            style="@style/CustomButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
